Bug 462091 - wrong caption of "Outer Glow" in Layer Style
Summary: wrong caption of "Outer Glow" in Layer Style
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: layer styles (other bugs)
Version First Reported In: unspecified
Platform: unspecified Unspecified
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-21 10:23 UTC by Aiek
Modified: 2022-12-08 14:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
outerGlow (11.75 KB, image/png)
2022-11-21 10:23 UTC, Aiek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aiek 2022-11-21 10:23:25 UTC
Created attachment 153921 [details]
outerGlow

SUMMARY
Wrong caption of "Outer Glow" in Layer Style

STEPS TO REPRODUCE
1. Open Layer Style's "Outer Glow" tab

OBSERVED RESULT
Caption is "Inner Glow"

EXPECTED RESULT
Caption "Outer Glow"

SOFTWARE/OS VERSIONS
Windows 7
Comment 1 Halla Rempt 2022-12-08 14:33:46 UTC
Git commit 603231285313f43a81e84e081cfd181e60018ef4 by Halla Rempt.
Committed on 08/12/2022 at 14:33.
Pushed by rempt into branch 'master'.

Label Outer Glow as Outer Glow

M  +4    -0    libs/ui/dialogs/kis_dlg_layer_style.cpp

https://invent.kde.org/graphics/krita/commit/603231285313f43a81e84e081cfd181e60018ef4
Comment 2 Halla Rempt 2022-12-08 14:33:54 UTC
Git commit b2ea8fcb45e976450cde09ce6750cb918c3b2099 by Halla Rempt.
Committed on 08/12/2022 at 14:33.
Pushed by rempt into branch 'krita/5.1'.

Label Outer Glow as Outer Glow
(cherry picked from commit 603231285313f43a81e84e081cfd181e60018ef4)

M  +4    -0    libs/ui/dialogs/kis_dlg_layer_style.cpp

https://invent.kde.org/graphics/krita/commit/b2ea8fcb45e976450cde09ce6750cb918c3b2099