Label Outer Glow as Outer Glow

BUG:462091
(cherry picked from commit 603231285313f43a81e84e081cfd181e60018ef4)